Fixed output panel overflow scrolling bug

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,8 @@
 // @Author: chris
 // @Date:   2017-03-10T15:54:46+11:00
 // @Email:  chris@southbanksoftware.com
-// @Last modified by:   chris
-// @Last modified time: 2017-03-10T16:41:52+11:00
+// @Last modified by:   guiguan
+// @Last modified time: 2017-03-10T20:57:03+11:00
 
 
 
@@ -60,14 +60,14 @@ h3 {
 }
 
 .outputPanel {
-  /*height: 100%;
-  width: 100%;*/
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
 
 .outputEditor {
   flex: 1;
+  min-height: 0;
 }
 
 .fullHeight {
